; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libpcap/extr_gencode.c_gen_snap.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libpcap/extr_gencode.c_gen_snap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.block = type { i32 }

@LLCSAP_SNAP = common dso_local global i32 0, align 4
@OR_LLC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.block* (i32*, i32, i32)* @gen_snap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.block* @gen_snap(i32* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca [8 x i32], align 16
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* @LLCSAP_SNAP, align 4
  %9 = getelementptr inbounds [8 x i32], [8 x i32]* %7, i64 0, i64 0
  store i32 %8, i32* %9, align 16
  %10 = load i32, i32* @LLCSAP_SNAP, align 4
  %11 = getelementptr inbounds [8 x i32], [8 x i32]* %7, i64 0, i64 1
  store i32 %10, i32* %11, align 4
  %12 = getelementptr inbounds [8 x i32], [8 x i32]* %7, i64 0, i64 2
  store i32 3, i32* %12, align 8
  %13 = load i32, i32* %5, align 4
  %14 = ashr i32 %13, 16
  %15 = getelementptr inbounds [8 x i32], [8 x i32]* %7, i64 0, i64 3
  store i32 %14, i32* %15, align 4
  %16 = load i32, i32* %5, align 4
  %17 = ashr i32 %16, 8
  %18 = getelementptr inbounds [8 x i32], [8 x i32]* %7, i64 0, i64 4
  store i32 %17, i32* %18, align 16
  %19 = load i32, i32* %5, align 4
  %20 = ashr i32 %19, 0
  %21 = getelementptr inbounds [8 x i32], [8 x i32]* %7, i64 0, i64 5
  store i32 %20, i32* %21, align 4
  %22 = load i32, i32* %6, align 4
  %23 = ashr i32 %22, 8
  %24 = getelementptr inbounds [8 x i32], [8 x i32]* %7, i64 0, i64 6
  store i32 %23, i32* %24, align 8
  %25 = load i32, i32* %6, align 4
  %26 = ashr i32 %25, 0
  %27 = getelementptr inbounds [8 x i32], [8 x i32]* %7, i64 0, i64 7
  store i32 %26, i32* %27, align 4
  %28 = load i32*, i32** %4, align 8
  %29 = load i32, i32* @OR_LLC, align 4
  %30 = getelementptr inbounds [8 x i32], [8 x i32]* %7, i64 0, i64 0
  %31 = call %struct.block* @gen_bcmp(i32* %28, i32 %29, i32 0, i32 8, i32* %30)
  ret %struct.block* %31
}

declare dso_local %struct.block* @gen_bcmp(i32*, i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
